<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".missiondetails.MissionDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/launchDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/launch_details_label"
            android:textAppearance="?android:attr/textAppearanceLarge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/flightNumberView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/launchDetails"
            tools:text="Flight Number: 30" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/missionNameView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/flightNumberView"
            tools:text="Mission Name: Thaicom 8" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/launchDateView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/missionNameView"
            tools:text="Launch Date: 2016-05-27T21:39:00.000Z" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/launchSiteView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/launchDateView"
            tools:text="Launch Site:\nCape Canaveral Air Force Station Space Launch Complex 40" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/missionDescriptionView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/launchSiteView"
            tools:text="Manufactured by Orbital ATK, the 3,100-kilogram (6,800 lb) Thaicom 8 communications satellite will serve Thailand, India and Africa from the 78.5° East geostationary location. It is equipped with 24 active Ku-band transponders." />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/missionWikiLinkButton"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mission_wiki_link"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/missionDescriptionView" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/rocketNameView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/missionWikiLinkButton"
            tools:text="Rocket: Falcon 1" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/rocketHeightView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rocketNameView"
            tools:text="Height: 22.25m" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/rocketMassView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rocketHeightView"
            tools:text="Mass: 30,146kg" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/rocketDiameterView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rocketMassView"
            tools:text="Diameter: 1.68m" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/rocketDescriptionView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rocketDiameterView"
            tools:text="The Falcon 1 was an expendable launch system privately developed and manufactured by SpaceX during 2006-2009. On 28 September 2008, Falcon 1 became the first privately-developed liquid-fuel launch vehicle to go into orbit around the Earth." />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/rocketWikiLinkButton"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rocket_wiki_link"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rocketDescriptionView" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
